--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -58,6 +58,8 @@
                         <a href="{{ "genes/" | relURL }}"
                             class="border-transparent text-slate-500 hover:border-primary hover:text-slate-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Browse
                             Genes</a>
+                        <a href="{{ "upload/" | relURL }}"
+                            class="border-transparent text-slate-500 hover:border-primary hover:text-slate-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Upload</a>
                         <a href="{{ "about/" | relURL }}"
                             class="border-transparent text-slate-500 hover:border-primary hover:text-slate-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">About</a>
                     </div>
