--- a/layouts/index.html
+++ b/layouts/index.html
@@ -69,7 +69,7 @@
 
     <!-- Navbar (Layer 1 - Bottom) -->
     <!-- z-40. Chicken (z-50) will overlap it. -->
-    <nav class="bg-white/10 backdrop-blur-sm border-b border-slate-200/10 sticky top-0 shadow-sm" style="z-index: 60;"
+    <nav class="bg-white/10 backdrop-blur-sm border-b border-slate-200/10 sticky top-0 shadow-sm" style="z-index: 40;"
         id="globalNav">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
@@ -83,6 +83,8 @@
                         <a href="/genes/"
                             class="border-transparent text-slate-500 hover:border-primary hover:text-slate-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Browse
                             Genes</a>
+                        <a href="/upload/"
+                            class="border-transparent text-slate-500 hover:border-primary hover:text-slate-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Upload</a>
                         <a href="/about/"
                             class="border-transparent text-slate-500 hover:border-primary hover:text-slate-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">About</a>
                     </div>
